[package]
name = "convention-validator"
version = "0.1.0"
authors = ["oOBoomberOo <boombercmd123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codespan-reporting = "0.9.2"
structopt = "0.3.13"
thiserror = "1.0.14"
serde = { version = "1.0.106", features = ["derive"] }
serde_json = "1.0.51"
notify = "4.0.15"